--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
@@ -18,6 +21,9 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
